Fixed some layout issues with the removed components when the app is in portrait orientation

--- a/src/components/MainPanel/MainPanel.module.css
+++ b/src/components/MainPanel/MainPanel.module.css
@@ -36,7 +36,7 @@
     width: 30px;
     height: 30px;
 }
-.navigation-cotnainer{
+.navigation .buttons{
     width: calc(100% - 50px);
     height: 100%;
     display: flex;
@@ -46,7 +46,7 @@
 .navigation button{
     width: auto;
     height: 100%;
-    padding: 10px 20px;
+    padding: 0 10px;
     border: 2px solid transparent;
     border-radius: 0;
     background-color: transparent;
@@ -55,11 +55,22 @@
 .selected{
     border-bottom: 2px solid rgba(211, 211, 211, 0.3) !important;
 }
+.mainPanel .content{
+    flex-grow: 1;
+    max-height: calc(100% - 50px);
+}
+.mainPanel.hide .content{
+    max-height: 100%;
+}
 @media (orientation: portrait) {
     .mainPanel{
-        width: 100%;
-        height: calc(50vh - 30px);
-        max-height: calc(50vh - 30px);
+        width: 100vw;
+        max-width: 100vw;
+        height: 50vh;
+        max-height: 50vh;
+    }
+    .mainPanel .content{
+        width: 100vw;
     }
     .mainPanel.extended{
         height: calc(100% - 60px);
