--- a/src/components/Pomodoro/Pomodoro.module.css
+++ b/src/components/Pomodoro/Pomodoro.module.css
@@ -349,10 +349,10 @@
 }
 @media (orientation: portrait) {
     .pomodoro{
-        height: 50vw;
-        width: 100vh;
-        max-width: 50vw;
-        max-height: 100vh;
+        height: 50vh;
+        width: 100vw;
+        max-width: 100vw;
+        max-height: 50vh;
         border-top: 1px solid rgba(211, 211, 211, 0.1);
     }
     .buttons{
@@ -365,8 +365,10 @@
         height: 50px;
     }
     .timer{
-        height: calc(100% - 75px);
-        max-height: calc(100% - 75px);
+        height: calc(50vh - 75px);
+        max-height: calc(50vh - 75px);
+        width: 100vw;
+        max-width: 100vw;
     }
     .timer-background{
         height: 100%;
